--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,9 @@
         "contextMenus",
         "tabs",
         "notifications",
+        "webRequest",
+        "webRequestBlocking",
+        "<all_urls>",
         "https://mobile.youdao.com/*"
     ],
     "content_scripts": [
@@ -29,7 +32,7 @@
         "scripts": [
             "eventPage.js"
         ],
-        "persistent": false
+        "persistent": true
     },
     "browser_action": {
         "default_icon": "icon.png",
